Adding the relationship

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionString": {
+    "LocalConnection": "Server=.;Database=TestDB;Trusted_Connection=True;TrustServerCertificate=True;"
+  }
   "AllowedHosts": "*"
 }
