Add person and job controller

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,8 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ConnectionString": {
-    "LocalConnection": "Server=.;Database=TestDB;Trusted_Connection=True;TrustServerCertificate=True;"
-  }
+  "ConnectionStrings": {
+    "LocalConnection": "Server=.;Database=FullTrainingEf;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
   "AllowedHosts": "*"
 }
