Add Data Transfer Obeject and Configuration

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,8 @@
   "ConnectionStrings": {
     "LocalConnection": "Server=.;Database=FullTrainingEf;Trusted_Connection=True;TrustServerCertificate=True;"
   },
+  "Config": {
+    "DefultDescription": "DefultValue"
+  },
   "AllowedHosts": "*"
 }
